tests/snapshots/examples_fixtures/type_system__failing__115_keyword_alias_elif.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/115_keyword_alias_elif.flx
== compile ==
failed (parse)
== diagnostics ==
error[E030]: Unknown Keyword

Unknown keyword `elif`. Flux uses `else if` for chained conditionals.

  examples/type_system/failing/115_keyword_alias_elif.flx:41:15
   |
41 | if true { 1 } elif false { 2 } else { 3 }
   |               ^^^^

Hint:
  Did you mean `else if`?
  Replace `elif`/`elsif` with `else if`.

Note:
  while parsing `if` expression


error[E030]: Unknown Keyword

Unknown keyword `elif`. Flux uses `else if` for chained conditionals.

  examples/type_system/failing/115_keyword_alias_elif.flx:41:15
   |
41 | if true { 1 } elif false { 2 } else { 3 }
   |               ^^^^

Hint:
  Did you mean `else if`?
  Replace `elif`/`elsif` with `else if`.

Found 2 errors.
== stdout ==
<not executed>
