tests/snapshots/examples_fixtures/type_system__failing__153_match_branch_conflict_prefers_e300.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/153_match_branch_conflict_prefers_e300.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Match Arm Type Mismatch

The arms of this `match` expression do not agree on a type.

  examples/type_system/failing/153_match_branch_conflict_prefers_e300.flx:4:18
  |
3 |         true -> 1,
  |                 - first arm returns `Int`

  |                 - this arm established the expected type
4 |         false -> "x",
  |                  ^^^
  |                  --- arm 2 has type `String`

  |                  --- arm 2 conflicts with that type

Note:
  first arm type: Int
  this arm type: String
  the first arm fixes the type expected from the whole `match`
  this arm produces the competing type

Help:
  Change arm 2 so every arm returns the same type.
== stdout ==
<not executed>
