tests/snapshots/examples_fixtures/type_system__failing__155_unresolved_member_access_strict_e425.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/155_unresolved_member_access_strict_e425.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `mystery`.

  examples/type_system/failing/155_unresolved_member_access_strict_e425.flx:2:22
  |
2 |     let value: Int = mystery.field
  |                      ^^^^^^^

Hint:
  Define it first: let mystery = ...;
== stdout ==
<not executed>
