tests/snapshots/examples_fixtures/type_system__failing__192_perform_arg_unresolved_strict_e425.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/192_perform_arg_unresolved_strict_e425.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
