tests/snapshots/examples_fixtures/type_system__failing__193_unreachable_pattern_arm_w202.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/193_unreachable_pattern_arm_w202.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
