tests/snapshots/examples_fixtures/type_system__failing__30_strict_public_unannotated_effectful.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/30_strict_public_unannotated_effectful.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
