tests/snapshots/examples_fixtures/type_system__failing__39_effect_alias_print_in_pure_function.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/39_effect_alias_print_in_pure_function.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `p` requires effect `IO` in this function signature.

  examples/type_system/failing/39_effect_alias_print_in_pure_function.flx:5:5
  |
5 |     p("hi")
  |     ^
  |     - effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.
== stdout ==
<not executed>
